# python-hitomi

./: README.md  pyproject.toml
docs/: uri-resolution.md  usage.md
hitomi/: __init__.py  constants.py  gallery.py  tag.py  types.py  uri.py  utility.py
