[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hitomi"
version = "0.1.0"
description = "Python port of the Hitomi.la API wrapper."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "H2Owater425"}]
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["."]
include = ["hitomi"]
